--- a/my-app/src/app/home-page/about-section.html
+++ b/my-app/src/app/home-page/about-section.html
@@ -267,8 +267,8 @@
             </div>
             
             <div class="form-decorations">
-              <img src="assets/link.png" alt="" class="link-decoration" aria-hidden="true">
-              <img src="assets/ground-hog.png" alt="" class="ground-hog-decoration" aria-hidden="true">
+              <img src="link.png" alt="" class="link-decoration" aria-hidden="true">
+              <img src="groundhog.png" alt="" class="ground-hog-decoration" aria-hidden="true">
             </div>
           </form>
         </div>
@@ -282,7 +282,7 @@
             </div>
             <h3>Email</h3>
             <p>Feel free to email me anytime!</p>
-            <a href="mailto:hetchawda44&#64;gmail.com" class="contact-link">prakriti.ce&#64;gmail.com</a>
+            <a href="mailto:prakriti.ce&#64;gmail.com" class="contact-link">prakriti.ce&#64;gmail.com</a>
           </div>
 
           <!-- Location Card -->
